--- a/style.css
+++ b/style.css
@@ -1,3 +1,19 @@
 .middle_tittle:hover {
     background-color: #f0f0f0;
 }
+
+
+body{
+  font-family: "Dosis", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
+
+/* .finally-text p{
+    /* text-decoration-line: line-through; 
+    text-decoration-style: dotted;
+    text-decoration-color: rgb(0, 0, 0); */
+
+    /* text-decoration: line-through dotted black; */
+/* } */ 
